<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="header_saved_election">Saved Elections</string>
    <string name="header_upcoming_election">Upcoming Elections</string>
    <string name="header_state_locations">Voting Location</string>
    <string name="header_ballot_information">Ballot Information</string>
    <string name="header_mailing_address">Mailing Address</string>
    <string name="header_state_information">Election Information</string>
    <string name="toggle_text_on">Unfollow Elections</string>
    <string name="toggle_text_off">Follow Elections</string>
    <string name="header_search_text">Representative Search</string>
    <string name="representative_address_one">Enter House details</string>
    <string name="representative_address_two">Enter Street/Locality</string>
    <string name="representative_city">Enter City</string>
    <string name="representative_zip_code">Enter Zip Code</string>
    <string name="btn_text_find_my_rep">Find My Representative</string>
    <string name="btn_text_use_my_location">Use My Location</string>
    <string name="rep_list_title">My Representative</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="launch_button_upcoming_election">Upcoming Elections</string>
    <string name="launch_button_find_my_rep">Find my representative</string>
</resources>
