<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_10"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_representative_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:id="@+id/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_search_text"
                    android:textColor="@color/gray50"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/address_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/representative_address_one"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.userFilledAddress.line1}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_title" />

                <EditText
                    android:id="@+id/address_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:autofillHints=""
                    android:hint="@string/representative_address_two"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.userFilledAddress.line2}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_1" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/representative_city"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.userFilledAddress.city}"
                    app:layout_constraintEnd_toStartOf="@id/state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_2" />

                <Spinner
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autofillHints=""
                    android:entries="@array/states"
                    android:inputType="textPostalAddress"
                    android:selectedItemPosition="@={viewModel.stateItemPosition}"
                    app:layout_constraintBottom_toBottomOf="@id/city"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/city"
                    app:layout_constraintTop_toTopOf="@id/city" />

                <EditText
                    android:id="@+id/zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/representative_zip_code"
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="@={viewModel.userFilledAddress.zip}"
                    app:layout_constraintEnd_toEndOf="@id/city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/city" />

                <Button
                    android:id="@+id/button_search"
                    style="@style/CustomPrimaryButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> viewModel.fetchRepresentatives()}"
                    android:text="@string/btn_text_find_my_rep"
                    app:layout_constraintTop_toBottomOf="@id/zip" />

                <Button
                    android:id="@+id/button_location"
                    style="@style/CustomPrimaryButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="@{() -> viewModel.fetchLocation()}"
                    android:text="@string/btn_text_use_my_location"
                    app:layout_constraintTop_toBottomOf="@id/button_search" />

                <TextView
                    android:id="@+id/representative_title"
                    style="@style/CustomTextStyle.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/rep_list_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_location" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_representatives"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:gravity="center"
                    android:nestedScrollingEnabled="false"
                    android:textAlignment="center"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/representative_title"
                    motion:listitem="@layout/layout_my_representative_item"
                    motion:visibilityMode="ignore" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>