<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.widget.CompoundButton" />

        <variable
            name="viewmodel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewmodel.voterInfo.election.name}"
            app:titleTextColor="@color/white"
            tools:title="Wisconsin Presidential Primary Election" />

        <TextView
            android:id="@+id/election_date"
            style="@style/CustomTextStylePrimary.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:text="@{viewmodel.voterInfo.election.electionDay.toGMTString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            style="@style/CustomTextStylePrimary.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/header_state_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            style="@style/CustomTextStylePrimary.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.openElectionLocations()}"
            android:text="@string/header_state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/state_ballot"
            style="@style/CustomTextStylePrimary.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.openBallotInformation()}"
            android:text="@string/header_ballot_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewmodel.isMailingAddressAvailable ? View.GONE : View.VISIBLE}"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/CustomTextStylePrimary.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/header_mailing_address"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <TextView
            android:id="@+id/address"
            style="@style/CustomTextStylePrimary.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/toggle_follow_election"
            style="@style/CustomPrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:onClick="@{(view) -> viewmodel.followElection(((CompoundButton)view).isChecked())}"
            android:textOff="@string/toggle_text_off"
            android:textOn="@string/toggle_text_on"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/status_loading_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:progressTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibilityStatus="@{viewmodel.dataLoading}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>